[package]
name = "grpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
cpu = "0.1.0"
prost = "0.13"
prost-types = "0.13"
bytes = "1.5"
tokio = { version = "1", features = ["rt", "net", "time", "io-util", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
futures-core = "0.3"

[build-dependencies]
tonic-build = "0.12"
